Fixes script execution